--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,24 @@
-version: 1.0.{build}
+image: Ubuntu1804
 
-image: Ubuntu
+stack: node 17
 
-stack: node
+branches:
+  only:
+    - main 
+
+cache: node_modules  
 
 install:
-  - npm install
+  - npm install  
+
+build: off  
 
 build_script:
-  - npm run build
+  - npm run build 
 
-artifacts:
-  - path: dist
-  
+test_script:
+  - npm run lint && npm test  
+
 deploy_script: 
   - git config --global credential.helper store
   - git config --global user.name AppVeyor
